tests/bad/parse_error.kel
// Falta '{' en función
fn main()
  val x = 5
}
